--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    left: 15px;
 }
 
 h1 {
@@ -16,11 +14,11 @@ h1 {
 }
 
 h1 #intro {
-    font-size: 1.3rem;
+    font-size: 7vw;
 }
 
 h1 #name {
-    font-size: 2rem;
+    font-size: 12vw;
 }
 
 
@@ -114,18 +112,15 @@ h1 #name {
     }
 }
 
-*/
 
+*/
 
 
 
 #shapes {
     display: flex;
-    width: 280px;
-    justify-content: space-around;
     position: relative;
-    bottom: 10px;
-    right: 15px;
+    bottom: 60px;
 }
 
 #square {
@@ -133,8 +128,8 @@ h1 #name {
     height: 30px;
     background-color: #f4a261; 
     position: relative;
-    left: 10px;
-    top: 5px;
+    top: 15vw;
+    right: 10vw;
     transform: rotate(-20deg);
     animation: 1s ease-in 1.1s squareBurst;
     animation-fill-mode: backwards;
@@ -149,8 +144,8 @@ h1 #name {
 .circle-one {
     background: #e9c46a;
     position: relative;
-    left: 145px;
-    top: 25px;
+    top: 20vw;
+    left: 35vw;
     animation: 1s ease .8s circleOneBurst;
     animation-fill-mode: backwards;
 }
@@ -158,8 +153,8 @@ h1 #name {
 .circle-two {
     background: #e76f51;
     position: relative;
-    right: 230px;
-    bottom: 115px;
+    bottom: 15vw;
+    right: 65vw;
     animation: 1.1s ease-out 1s circleTwoBurst;
     animation-fill-mode: backwards;
 }
@@ -172,8 +167,8 @@ h1 #name {
     border-bottom: 30px solid #2a9d8f;
     transform: rotate(40deg);
     position: relative;
-    left: 40px;
-    bottom: 150px;
+    bottom: 23vw;
+    left: 15vw;
     animation: 1s linear .9s triangleBurst;
     animation-fill-mode: backwards;
 }
@@ -183,8 +178,8 @@ h1 #name {
     height: 17.32px;
     background: #264653;
     position: relative;
-    left: 60px;
-    bottom: 120px;
+    bottom: 15vw;
+    left: 25vw;
     animation: .9s ease-out 1s hexagonBurst;
     animation-fill-mode: backwards;
   }
