--- a/name plate/styles.css
+++ b/name plate/styles.css
@@ -1,8 +1,25 @@
 
+html {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
 
 #name-plate {
-    width: 500px;
-    margin: 100px auto;
+    width: 90%;
+    margin: 100px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -157,7 +174,7 @@ h1 #name {
 .circle-two {
     background: #e76f51;
     position: relative;
-    right: 230px;
+    right: 130px;
     bottom: 115px;
     animation: 1.1s ease-out 1s circleTwoBurst;
     animation-fill-mode: backwards;
