--- a/test.css
+++ b/test.css
@@ -1,5 +1,9 @@
 
 
+body {
+    margin: 0;
+}
+
 #name {
     display: flex;
     justify-content: center;
@@ -19,7 +23,7 @@ h1 #name {
 }
 
 #name-plate {
-    margin: 100px 0;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +31,7 @@ h1 #name {
 
 
 
-@keyframes squareBurst {
+@keyframes squareFallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
@@ -40,29 +44,11 @@ h1 #name {
         transform: translate(0, -30px);
     }
     100% {
-        transform: translate(0);
-        transform: rotate(-20deg);
+        transform: translate(0) rotate(-20deg);
     }
 }
 
-@keyframes circleOneBurst {
-    0% {
-        transform: translate(0, -500px);
-        opacity: 0;
-    }
-    40% {
-        transform: translate(0);
-        opacity: 1;
-    }
-    70% {
-        transform: translate(0, -30px);
-    }
-    100% {
-        transform: translate(0);
-    }
-}
-
-@keyframes circleTwoBurst {
+@keyframes fallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
@@ -79,7 +65,7 @@ h1 #name {
     }
 }
 
-@keyframes triangleBurst {
+@keyframes triangleFallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
@@ -92,28 +78,9 @@ h1 #name {
         transform: translate(0, -30px);
     }
     100% {
-        transform: translate(0);
-        transform: rotate(40deg);
+        transform: translate(0) rotate(40deg);
     }
 }
-
-@keyframes hexagonBurst {
-    0% {
-        transform: translate(0, -500px);
-        opacity: 0;
-    }
-    40% {
-        transform: translate(0);
-        opacity: 1;
-    }
-    70% {
-        transform: translate(0, -30px);
-    }
-    100% {
-        transform: translate(0);
-    }
-}
-
 
 
 
@@ -132,7 +99,7 @@ h1 #name {
     position: relative;
     top: 15vw;
     transform: rotate(-20deg);
-    animation: 1s ease-in 1.1s squareBurst;
+    animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
@@ -146,8 +113,8 @@ h1 #name {
     background: #e9c46a;
     position: relative;
     top: 11vw;
-    left: 35vw;
-    animation: 1s ease .8s circleOneBurst;
+    left: 25vw;
+    animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
 
@@ -156,7 +123,7 @@ h1 #name {
     position: relative;
     bottom: 12vw;
     right: 54vw;
-    animation: 1.1s ease-out 1s circleTwoBurst;
+    animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
 
@@ -170,7 +137,7 @@ h1 #name {
     position: relative;
     bottom: 23vw;
     left: 8vw;
-    animation: 1s linear .9s triangleBurst;
+    animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
 
@@ -181,7 +148,7 @@ h1 #name {
     position: relative;
     bottom: 12vw;
     left: 20vw;
-    animation: .9s ease-out 1s hexagonBurst;
+    animation: .9s ease-out 1s fallIn;
     animation-fill-mode: backwards;
   }
   #hexagon::before {
@@ -206,3 +173,178 @@ h1 #name {
     border-right: 15px solid transparent;
     border-top: 8.66px solid #264653;
   }
+
+
+
+
+
+
+
+
+
+
+
+@keyframes cardStackRight {
+    0% {
+        transform: translate(30px, 0) rotate(0);
+    }
+    40% {
+        transform: translate(-15px, 20px) rotate(-15deg);
+    }
+    70% {
+        transform: translate(5px, -5px) rotate(-3deg);
+    }
+    100% {
+        transform: translate(0) rotate(-6deg);
+    }
+}
+
+@keyframes cardStackLeft {
+    0% {
+        transform: translate(-25px, 0) rotate(0);
+    }
+    40% {
+        transform: translate(15px, 20px) rotate(15deg);
+    }
+    70% {
+        transform: translate(-5px, -5px) rotate(3deg);
+    }
+    100% {
+        transform: translate(0) rotate(8deg);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+.window {
+    width: 200px;
+    height: 200px;
+    margin: 80px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgb(228, 234, 228);
+}
+
+.window-content {
+    background-image: url(./web-page-projects.png);
+    background-size: 320px;
+    background-color: white;
+    width: 100%;
+    height: 85%;
+    border-end-start-radius: 5px;
+    border-end-end-radius: 5px;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.circles {
+    height: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 5px;
+}
+
+.circle {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: rgb(248, 92, 92);
+}
+
+.yellow {
+    background-color: rgb(255, 214, 68);
+}
+
+.green {
+    background-color: rgb(45, 205, 45);
+}
+
+.search-bar {
+    height: 60%;
+    width: 50%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    margin-right: 10%;
+}
+
+.search-bar p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(95, 134, 95);
+    font-size: .8rem;
+    margin: 1% 3%;
+    overflow: hidden;
+}
+
+.menu {
+    height: 35%;
+    width: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 10px;
+}
+
+.menu-bar {
+    width: 90%;
+    height: 2px;
+}
+
+
+.one {
+    background-color:#cbedf1;
+    position: relative;
+    top: 15px;
+    right: 30px;
+    transform: rotate(-6deg);
+    animation: .9s ease-in 1s cardStackRight;
+    animation-fill-mode: backwards;
+}
+
+.two {
+    background-color:#f9e6e1;
+    position: relative;
+    bottom: 270px;
+    left: 25px;
+    transform: rotate(8deg);
+    animation: .9s ease-in 1s cardStackLeft;
+    animation-fill-mode: backwards;
+}
+
+.two .menu-bar {
+    background-color:#ac687b;
+}
+.three {
+    background-color:#cef5dc;
+    position: relative;
+    bottom: 550px;
+}
+
+.three .search-bar {
+    background-color: #f5fff8;
+}
+
+.three .menu-bar {
+    background-color:rgb(95, 134, 95);
+}
