--- a/test.css
+++ b/test.css
@@ -4,6 +4,30 @@ body {
     margin: 0;
 }
 
+
+
+header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+header h2 {
+    background-color: #ffd874;
+    border-radius: 40px;
+    font-family: "Calistoga";
+    font-size: 5vw;
+    letter-spacing: 1.1px;
+    margin: 30px;
+    padding: 10px 20px;
+}
+
+
+
+
+
 #name {
     display: flex;
     justify-content: center;
@@ -23,7 +47,7 @@ h1 #name {
 }
 
 #name-plate {
-    margin-top: 100px;
+    margin-top: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -216,13 +240,6 @@ h1 #name {
 
 
 
-
-
-
-
-
-
-
 .window {
     width: 200px;
     height: 200px;
@@ -231,12 +248,10 @@ h1 #name {
     flex-direction: column;
     align-items: center;
     border-radius: 5px;
-    box-shadow: 0 5px 10px rgb(228, 234, 228);
+    box-shadow: 0 5px 10px rgba(57, 57, 57, 0.103);
 }
 
 .window-content {
-    background-image: url(./web-page-projects.png);
-    background-size: 320px;
     background-color: white;
     width: 100%;
     height: 85%;
@@ -290,7 +305,7 @@ h1 #name {
 
 .search-bar p {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(95, 134, 95);
+    color: rgb(206, 206, 206);
     font-size: .8rem;
     margin: 1% 3%;
     overflow: hidden;
@@ -313,7 +328,7 @@ h1 #name {
 
 
 .one {
-    background-color:#cbedf1;
+    background-color:#2a9d8f;
     position: relative;
     top: 15px;
     right: 30px;
@@ -323,7 +338,7 @@ h1 #name {
 }
 
 .two {
-    background-color:#f9e6e1;
+    background-color:#e76f51;
     position: relative;
     bottom: 270px;
     left: 25px;
@@ -333,18 +348,18 @@ h1 #name {
 }
 
 .two .menu-bar {
-    background-color:#ac687b;
+    background-color:#f8a894;
 }
 .three {
-    background-color:#cef5dc;
+    background-color:#264653;
     position: relative;
     bottom: 550px;
 }
 
 .three .search-bar {
-    background-color: #f5fff8;
+    background-color: rgb(0, 0, 0);
 }
 
 .three .menu-bar {
-    background-color:rgb(95, 134, 95);
+    background-color: #5a8393;
 }
