--- a/test.css
+++ b/test.css
@@ -26,31 +26,60 @@ header h2 {
 
 
 
-
-
-#name {
-    display: flex;
-    justify-content: center;
+#grid-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
 }
 
-h1 {
+#window-container {
+    grid-row: 2;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+
+
+
+/*#name {
+    display: flex;
+    justify-content: center;
+}*/
+
+#name {
     font-family: "Calistoga";
     z-index: 10;
 }
 
-h1 #intro {
+#intro {
+    margin: 0 5.5vmin;  
     font-size: 6vw;
 }
 
-h1 #name {
+#info-one {
+    text-align: end;
+    margin: 0 25vmin;
+    font-size: 4vw;
+}
+
+#info-two {
+    text-align: end;
+    margin: 0 5.5vmin;
+    font-size: 5vw;
+}
+
+h1 {
+    text-align: center;
     font-size: 10vw;
+    margin: 0;
 }
 
 #name-plate {
-    margin-top: 60px;
+    margin: 15vmin 0;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    grid-row: 1;
 }
 
 
@@ -106,38 +135,55 @@ h1 #name {
     }
 }
 
+@keyframes hexFallIn {
+    0% {
+        transform: translate(0, -500px);
+        opacity: 0;
+    }
+    40% {
+        transform: translate(0);
+        opacity: 1;
+    }
+    70% {
+        transform: translate(0, -30px);
+    }
+    100% {
+        transform: translate(0) rotate(10deg);
+    }
+}
+
 
 
 
 
 #shapes {
     display: flex;
-    position: relative;
-    bottom: 60px;
+    position: absolute;
 }
 
 #square {
-    width: 30px;
-    height: 30px;
+    width: 8vmin;
+    height: 8vmin;
     background-color: #f4a261; 
     position: relative;
-    top: 15vw;
+    top: 15vmin;
+    right: 5vmin;
     transform: rotate(-20deg);
     animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
 #circle {
-    width: 30px;
-    height: 30px;
+    width: 8vmin;
+    height: 8vmin;
     border-radius: 50%
 }
 
 .circle-one {
     background: #e9c46a;
     position: relative;
-    top: 11vw;
-    left: 25vw;
+    top: 18vmin;
+    left: 45vmin;
     animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
@@ -145,8 +191,8 @@ h1 #name {
 .circle-two {
     background: #e76f51;
     position: relative;
-    bottom: 12vw;
-    right: 56vw;
+    bottom: 15vmin;
+    right: 55vmin;
     animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
@@ -154,48 +200,49 @@ h1 #name {
 #triangle {
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 30px solid #2a9d8f;
+    border-left: 4vmin solid transparent;
+    border-right: 4vmin solid transparent;
+    border-bottom: 8vmin solid #2a9d8f;
     transform: rotate(40deg);
     position: relative;
-    bottom: 23vw;
-    left: 8vw;
+    bottom: 23vmin;
+    left: 8vmin;
     animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
 
 #hexagon {
-    width: 30px;
-    height: 17.32px;
+    width: 8vmin;
+    height: 4.62vmin;
     background: #264653;
     position: relative;
-    bottom: 12vw;
-    left: 20vw;
-    animation: .9s ease-out 1s fallIn;
+    bottom: 12vmin;
+    left: 20vmin;
+    transform: rotate(10deg);
+    animation: .9s ease-out 1s hexFallIn;
     animation-fill-mode: backwards;
   }
   #hexagon::before {
     content: "";
     position: absolute;
-    top: -8.1px;
+    top: -2.16vmin;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 8.66px solid #264653;
+    border-left: 4vmin solid transparent;
+    border-right: 4vmin solid transparent;
+    border-bottom: 2.31vmin solid #264653;
   }
   #hexagon::after {
     content: "";
     position: absolute;
-    bottom: -8.1px;
+    bottom: -2.16vmin;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-top: 8.66px solid #264653;
+    border-left: 4vmin solid transparent;
+    border-right: 4vmin solid transparent;
+    border-top: 2.31vmin solid #264653;
   }
 
 
@@ -210,45 +257,54 @@ h1 #name {
 
 @keyframes cardStackRight {
     0% {
-        transform: translate(30px, 0) rotate(0);
+        transform: translate(0) rotate(0);
     }
     40% {
-        transform: translate(-15px, 20px) rotate(-15deg);
+        transform: translate(-30px, 35px) rotate(-15deg);
     }
     70% {
-        transform: translate(5px, -5px) rotate(-3deg);
+        transform: translate(-10px, -5px) rotate(-3deg);
     }
     100% {
-        transform: translate(0) rotate(-6deg);
+        transform: translate(-25px) rotate(-6deg);
     }
 }
 
 @keyframes cardStackLeft {
     0% {
-        transform: translate(-25px, 0) rotate(0);
+        transform: translate(0) rotate(0);
     }
     40% {
-        transform: translate(15px, 20px) rotate(15deg);
+        transform: translate(30px, 35px) rotate(15deg);
     }
     70% {
-        transform: translate(-5px, -5px) rotate(3deg);
+        transform: translate(10px, 5px) rotate(3deg);
     }
     100% {
-        transform: translate(0) rotate(8deg);
+        transform: translate(25px) rotate(8deg);
     }
 }
 
 
 
+#windows {
+    width: 60vmin;
+    height: 60vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .window {
-    width: 200px;
-    height: 200px;
+    width: 50vmin;
+    height: 50vmin;
     margin: 80px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(57, 57, 57, 0.103);
+    position: absolute;
 }
 
 .window-content {
@@ -290,8 +346,8 @@ h1 #name {
 }
 
 .circle {
-    width: 8px;
-    height: 8px;
+    width: 1.8vmin;
+    height: 1.8vmin;
     border-radius: 50%;
 }
 
@@ -319,7 +375,7 @@ h1 #name {
 .search-bar p {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(206, 206, 206);
-    font-size: .8rem;
+    font-size: .6rem;
     margin: 1% 3%;
     overflow: hidden;
 }
@@ -342,22 +398,16 @@ h1 #name {
 
 .one {
     background-color:#2a9d8f;
-    position: absolute;
-    top: 225px;
-    right: 117px;
     transform: rotate(-6deg);
     animation: .9s ease-in 1s cardStackRight;
-    animation-fill-mode: backwards;
+    animation-fill-mode: both;
 }
 
 .two {
     background-color:#e76f51;
-    position: absolute;
-    top: 225px;
-    left: 113px;
     transform: rotate(8deg);
     animation: .9s ease-in 1s cardStackLeft;
-    animation-fill-mode: backwards;
+    animation-fill-mode: both;
 }
 
 .two .menu-bar {
@@ -365,13 +415,12 @@ h1 #name {
 }
 .three {
     background-color:#264653;
-    position: relative;
     z-index: 10;
 }
 
 .three .window-content {
     background-image: url(./browser\ windows/web-page-projects.png);
-    background-size: 200px;
+    background-size: 50vmin;
 }
 
 .three .search-bar {
