--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,63 @@
 
-html {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+body {
+    margin: 0;
 }
 
+#grid {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+
+
+
+/* -- Main Text -- */
 
 #name-plate {
-    width: 500px;
-    margin: 100px 0;
+    margin: 15vmin 0;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    grid-row: 1;
 }
 
-h1 {
+#name-text {
     font-family: "Calistoga";
     z-index: 10;
 }
 
-h1 #intro {
-    font-size: 7vw;
+#hello {
+    margin: 0 5.5vmin;  
+    font-size: 6vw;
 }
 
-h1 #name {
-    font-size: 12vw;
+#front-end {
+    text-align: end;
+    margin: 0 25vmin;
+    font-size: 4vw;
+}
+
+#web-dev {
+    text-align: end;
+    margin: 0 5.5vmin;
+    font-size: 5vw;
+}
+
+h1 {
+    text-align: center;
+    font-size: 10vw;
+    margin: 0;
 }
 
 
 
-/*
 
-@keyframes squareBurst {
-    0% {
-        transform: translate(0, -500px);
-        opacity: 0;
-    }
-    40% {
-        transform: translate(0);
-        opacity: 1;
-    }
-    70% {
-        transform: translate(0, -30px);
-    }
-    100% {
-        transform: translate(0);
-        transform: rotate(-20deg);
-    }
-}
 
-@keyframes circleOneBurst {
-    0% {
-        transform: translate(0, -500px);
-        opacity: 0;
-    }
-    40% {
-        transform: translate(0);
-        opacity: 1;
-    }
-    70% {
-        transform: translate(0, -30px);
-    }
-    100% {
-        transform: translate(0);
-    }
-}
 
-@keyframes circleTwoBurst {
+/* -- Shapes -- */
+
+@keyframes fallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
@@ -83,7 +74,7 @@ h1 #name {
     }
 }
 
-@keyframes triangleBurst {
+@keyframes squareFallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
@@ -96,12 +87,11 @@ h1 #name {
         transform: translate(0, -30px);
     }
     100% {
-        transform: translate(0);
-        transform: rotate(40deg);
+        transform: translate(0) rotate(-20deg);
     }
 }
 
-@keyframes hexagonBurst {
+@keyframes triangleFallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
@@ -114,101 +104,350 @@ h1 #name {
         transform: translate(0, -30px);
     }
     100% {
-        transform: translate(0);
+        transform: translate(0) rotate(40deg);
     }
 }
 
-
-*/
-
+@keyframes hexFallIn {
+    0% {
+        transform: translate(0, -500px);
+        opacity: 0;
+    }
+    40% {
+        transform: translate(0);
+        opacity: 1;
+    }
+    70% {
+        transform: translate(0, -30px);
+    }
+    100% {
+        transform: translate(0) rotate(10deg);
+    }
+}
 
 
 #shapes {
     display: flex;
-    position: relative;
-    bottom: 60px;
+    position: absolute;
 }
 
 #square {
-    width: 30px;
-    height: 30px;
+    width: 8vmin;
+    height: 8vmin;
     background-color: #f4a261; 
     position: relative;
-    top: 15vw;
-    right: 10vw;
+    top: 15vmin;
+    right: 5vmin;
     transform: rotate(-20deg);
-    animation: 1s ease-in 1.1s squareBurst;
+    animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
-#circle {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%
-}
-
-.circle-one {
+#circle-one {
+    width: 8vmin;
+    height: 8vmin;
+    border-radius: 50%;
     background: #e9c46a;
     position: relative;
-    top: 20vw;
-    left: 35vw;
-    animation: 1s ease .8s circleOneBurst;
+    top: 18vmin;
+    left: 45vmin;
+    animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
 
-.circle-two {
+#circle-two {
+    width: 8vmin;
+    height: 8vmin;
+    border-radius: 50%;
     background: #e76f51;
     position: relative;
-    bottom: 15vw;
-    right: 65vw;
-    animation: 1.1s ease-out 1s circleTwoBurst;
+    bottom: 15vmin;
+    right: 55vmin;
+    animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
 
 #triangle {
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 30px solid #2a9d8f;
+    border-left: 4vmin solid transparent;
+    border-right: 4vmin solid transparent;
+    border-bottom: 8vmin solid #2a9d8f;
     transform: rotate(40deg);
     position: relative;
-    bottom: 23vw;
-    left: 15vw;
-    animation: 1s linear .9s triangleBurst;
+    bottom: 23vmin;
+    left: 8vmin;
+    animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
 
 #hexagon {
-    width: 30px;
-    height: 17.32px;
+    width: 8vmin;
+    height: 4.62vmin;
     background: #264653;
     position: relative;
-    bottom: 15vw;
-    left: 25vw;
-    animation: .9s ease-out 1s hexagonBurst;
+    bottom: 12vmin;
+    left: 20vmin;
+    transform: rotate(10deg);
+    animation: .9s ease-out 1s hexFallIn;
     animation-fill-mode: backwards;
   }
   #hexagon::before {
     content: "";
     position: absolute;
-    top: -8.66px;
+    top: -2.16vmin;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 8.665px solid #264653;
+    border-left: 4vmin solid transparent;
+    border-right: 4vmin solid transparent;
+    border-bottom: 2.31vmin solid #264653;
   }
   #hexagon::after {
     content: "";
     position: absolute;
-    bottom: -8.66px;
+    bottom: -2.16vmin;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-top: 8.66px solid #264653;
+    border-left: 4vmin solid transparent;
+    border-right: 4vmin solid transparent;
+    border-top: 2.31vmin solid #264653;
   }
-   
+
+
+
+
+
+
+
+
+/* -- Browsers -- */
+
+
+@keyframes cardStackRight {
+    0% {
+        transform: translate(0) rotate(0);
+    }
+    40% {
+        transform: translate(-30px, 35px) rotate(-15deg);
+    }
+    70% {
+        transform: translate(-10px, -5px) rotate(-3deg);
+    }
+    100% {
+        transform: translate(-25px) rotate(-6deg);
+    }
+}
+
+@keyframes cardStackLeft {
+    0% {
+        transform: translate(0) rotate(0);
+    }
+    40% {
+        transform: translate(30px, 35px) rotate(15deg);
+    }
+    70% {
+        transform: translate(10px, 5px) rotate(3deg);
+    }
+    100% {
+        transform: translate(25px) rotate(8deg);
+    }
+}
+
+
+#window-container {
+    grid-row: 2;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#windows {
+    width: 60vmin;
+    height: 60vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.window {
+    width: 50vmin;
+    height: 50vmin;
+    margin: 80px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(57, 57, 57, 0.103);
+    position: absolute;
+}
+
+.window-content {
+    background-color: white;
+    width: 100%;
+    height: 85%;
+    border-end-start-radius: 5px;
+    border-end-end-radius: 5px;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.browser-btns {
+    height: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 5px;
+}
+
+.browser-btn {
+    width: 1.8vmin;
+    height: 1.8vmin;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: rgb(248, 92, 92);
+}
+
+.yellow {
+    background-color: rgb(255, 214, 68);
+}
+
+.green {
+    background-color: rgb(45, 205, 45);
+}
+
+.search-bar {
+    height: 60%;
+    width: 50%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    margin-right: 10%;
+}
+
+.search-bar p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(206, 206, 206);
+    font-size: 1.8vmin;
+    margin: 1% 3%;
+    overflow: hidden;
+}
+
+.menu {
+    height: 35%;
+    width: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 10px;
+}
+
+.menu-bar {
+    width: 90%;
+    height: 2px;
+}
+
+
+.window.one {
+    background-color:#2a9d8f;
+    transform: rotate(-6deg);
+    animation: .9s ease-in 1s cardStackRight;
+    animation-fill-mode: both;
+}
+
+.window.two {
+    background-color:#e76f51;
+    transform: rotate(8deg);
+    animation: .9s ease-in 1s cardStackLeft;
+    animation-fill-mode: both;
+}
+
+.window.two .menu-bar {
+    background-color:#f8a894;
+}
+.window.three {
+    background-color:#264653;
+    z-index: 10;
+}
+
+.window.three .window-content {
+    background-image: url(./browser-windows/web-page-projects.png);
+    background-size: 50vmin;
+}
+
+.window.three .search-bar {
+    background-color: rgb(0, 0, 0);
+}
+
+.window.three .menu-bar {
+    background-color: #5a8393;
+}
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 575px) {
+    
+    #name-plate {
+        margin: 87px 0;
+    }
+
+    #hello {
+        margin: 0 32px;  
+        font-size: 35px;
+    }
+    
+    #front-end {
+        margin: 0 145px;
+        font-size: 23px;
+    }
+    
+    #web-dev {
+        margin: 0 32px;
+        font-size: 29px;
+    }
+    
+    h1 {
+        font-size: 58px;
+    }
+
+
+
+
+
+
+    #windows {
+        width: 348px;
+        height: 348px;
+    }
+    .window {
+        width: 290px;
+        height: 290px;
+    }
+    .window.three .window-content {
+        background-size: 290px;
+    }
+    .browser-btn {
+        width: 10px;
+        height: 10px;
+    }
+    .search-bar p {
+        font-size: .65rem;
+    }
+
+}
