--- a/test.css
+++ b/test.css
@@ -40,12 +40,6 @@ header h2 {
 
 
 
-
-/*#name {
-    display: flex;
-    justify-content: center;
-}*/
-
 #name {
     font-family: "Calistoga";
     z-index: 10;
@@ -375,7 +369,7 @@ h1 {
 .search-bar p {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(206, 206, 206);
-    font-size: .6rem;
+    font-size: 1.2vw;
     margin: 1% 3%;
     overflow: hidden;
 }
