--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
 
 body {
     margin: 0;
+    background-color: rgb(255, 255, 252);
 }
 
 #grid {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+    margin: 10vmin 0 20vmin;
 }
 
 
@@ -52,10 +54,45 @@ h1 {
 
 
 
+@media only screen and (min-width: 575px) {
+    
+    #name-plate {
+        margin: 87px 0;
+    }
+
+    #hello {
+        margin: 0 32px;  
+        font-size: 35px;
+    }
+    
+    #front-end {
+        margin: 0 145px;
+        font-size: 23px;
+    }
+    
+    #web-dev {
+        margin: 0 32px;
+        font-size: 29px;
+    }
+    
+    h1 {
+        font-size: 58px;
+    }
+}
+
+
+
+
+
+
+
+
 
 
 
 /* -- Shapes -- */
+
+
 
 @keyframes fallIn {
     0% {
@@ -132,37 +169,37 @@ h1 {
 }
 
 #square {
-    width: 8vmin;
-    height: 8vmin;
+    width: 10vmin;
+    height: 10vmin;
     background-color: #f4a261; 
     position: relative;
-    top: 15vmin;
-    right: 5vmin;
+    top: 18vmin;
+    right: 7vmin;
     transform: rotate(-20deg);
     animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
 #circle-one {
-    width: 8vmin;
-    height: 8vmin;
+    width: 10vmin;
+    height: 10vmin;
     border-radius: 50%;
     background: #e9c46a;
     position: relative;
-    top: 18vmin;
-    left: 45vmin;
+    top: 20vmin;
+    left: 50vmin;
     animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
 
 #circle-two {
-    width: 8vmin;
-    height: 8vmin;
+    width: 10vmin;
+    height: 10vmin;
     border-radius: 50%;
     background: #e76f51;
     position: relative;
-    bottom: 15vmin;
-    right: 55vmin;
+    bottom: 17vmin;
+    right: 60vmin;
     animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
@@ -170,24 +207,24 @@ h1 {
 #triangle {
     width: 0;
     height: 0;
-    border-left: 4vmin solid transparent;
-    border-right: 4vmin solid transparent;
-    border-bottom: 8vmin solid #2a9d8f;
+    border-left: 5vmin solid transparent;
+    border-right: 5vmin solid transparent;
+    border-bottom: 10vmin solid #2a9d8f;
     transform: rotate(40deg);
     position: relative;
-    bottom: 23vmin;
+    bottom: 25vmin;
     left: 8vmin;
     animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
 
 #hexagon {
-    width: 8vmin;
-    height: 4.62vmin;
+    width: 10vmin;
+    height: 5.78vmin;
     background: #264653;
     position: relative;
-    bottom: 12vmin;
-    left: 20vmin;
+    bottom: 15vmin;
+    left: 22vmin;
     transform: rotate(10deg);
     animation: .9s ease-out 1s hexFallIn;
     animation-fill-mode: backwards;
@@ -195,27 +232,80 @@ h1 {
   #hexagon::before {
     content: "";
     position: absolute;
-    top: -2.16vmin;
+    top: -2.7vmin;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 4vmin solid transparent;
-    border-right: 4vmin solid transparent;
-    border-bottom: 2.31vmin solid #264653;
+    border-left: 5vmin solid transparent;
+    border-right: 5vmin solid transparent;
+    border-bottom: 2.9vmin solid #264653;
   }
   #hexagon::after {
     content: "";
     position: absolute;
-    bottom: -2.16vmin;
+    bottom: -2.7vmin;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 4vmin solid transparent;
-    border-right: 4vmin solid transparent;
-    border-top: 2.31vmin solid #264653;
+    border-left: 5vmin solid transparent;
+    border-right: 5vmin solid transparent;
+    border-top: 2.9vmin solid #264653;
   }
 
+/*
+  @media only screen and (min-width: 575px) {
+    
+    #square {
+        width: 57px;
+        height: 57px;
+        top: 105px;
+        right: 43px;
+    }
 
+    #circle-one {
+        width: 57px;
+        height: 57px;
+        top: 114px;
+        left: 285px;
+    }
+    
+    #circle-two {
+        width: 57px;
+        height: 57px;
+        bottom: 97px;
+        right: 342px;
+    }
+
+    #triangle {
+        border-left: 28.5px solid transparent;
+        border-right: 28.5px solid transparent;
+        border-bottom: 57px solid #2a9d8f;
+        bottom: 142px;
+        left: 45.6px;
+    }
+
+    #hexagon {
+        width: 57px;
+        height: 33px;
+        bottom: 85.5px;
+        left: 125.4px;
+      }
+      #hexagon::before {
+        top: -15.4px;
+        border-left: 28.5px solid transparent;
+        border-right: 28.5px solid transparent;
+        border-bottom: 16.53px solid #264653;
+      }
+      #hexagon::after {
+        bottom: -15.4px;
+        border-left: 28.5px solid transparent;
+        border-right: 28.5px solid transparent;
+        border-top: 16.53px solid #264653;
+      }
+
+}
+
+*/
 
 
 
@@ -301,11 +391,11 @@ h1 {
 
 .browser-btns {
     height: 50%;
-    width: 50px;
+    width: 8vmin;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 0 5px;
+    margin: 0 2vmin;
 }
 
 .browser-btn {
@@ -345,7 +435,7 @@ h1 {
 
 .menu {
     height: 35%;
-    width: 20px;
+    width: 4vmin;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -395,42 +485,10 @@ h1 {
 }
 
 
-
-
-
-
-
+/*
 
 @media only screen and (min-width: 575px) {
     
-    #name-plate {
-        margin: 87px 0;
-    }
-
-    #hello {
-        margin: 0 32px;  
-        font-size: 35px;
-    }
-    
-    #front-end {
-        margin: 0 145px;
-        font-size: 23px;
-    }
-    
-    #web-dev {
-        margin: 0 32px;
-        font-size: 29px;
-    }
-    
-    h1 {
-        font-size: 58px;
-    }
-
-
-
-
-
-
     #windows {
         width: 348px;
         height: 348px;
@@ -450,4 +508,36 @@ h1 {
         font-size: .65rem;
     }
 
+}
+*/
+
+
+
+@media only screen and (min-width: 1200px) {
+    
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #grid {
+        display: flex;
+        margin-top: 100px;
+    }
+
+    #name-plate {
+        margin-left: 8vmin;
+    }
+
+    #circle-one {
+        left: 48vmin;
+    }
+
+    #window-container {
+        margin-left: 120px;
+        position: relative;
+        transform: rotate(10deg);
+        top: 100px;
+    }
 }
