--- a/styles.css
+++ b/styles.css
@@ -72,18 +72,19 @@ header img {
 
 
 .popup {
+    width: 100%;
     display: flex;
     justify-content: center;
     z-index: 20;
     overflow: hidden;
-    width: 0;
+    height: 0;
     opacity: 0; 
     transition: .5s;
 }
 
 
 .popup.is-active {
-    width: 100%;
+    height: 100%;
     opacity: 1;
 }
 
