--- a/styles.css
+++ b/styles.css
@@ -263,7 +263,7 @@ h1 {
 /* -- Shapes -- */
 
 
-
+/*
 @keyframes fallIn {
     0% {
         transform: translate(0, -500px);
@@ -331,7 +331,7 @@ h1 {
         transform: translate(0) rotate(0);
     }
 }
-
+*/
 
 #shapes {
     width: 50vmin;
@@ -352,34 +352,34 @@ h1 {
 }
 
 .shape {
-    width: 40%;
+    width: 150%;
     position: relative;
 }
 
 .square {
-    top: 40%;
-    left: 15%;
+    top: 120%;
+    left: 215%;
     animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
 .yel-circle {
-    top: 55%;
-    left: 120%;
+    top: 95%;
+    left: 250%;
     animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
 
 .red-circle {
     bottom: 40%;
-    right: 175%;
+    right: 420%;
     animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
 
 .triangle {
-    bottom: 60%;
-    left: 20%;
+    bottom: 90%;
+    left: 50%;
     animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
